# Sistech-OS

./: .env.example  .gitignore  README.md
agents/endpoint/: README.md  agent.py  requirements.txt
apps/web/: README.md  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
docs/: ARCHITECTURE.md  COLABORACAO.md  PRODUCT_SPEC.md  ROADMAP.md
infra/: docker-compose.yml
services/api/: README.md  pyproject.toml
services/api/app/: config.py  database.py  main.py  models.py  rmm.py  schemas.py  seed_data.py
services/local/: sistech_os.db
